# rushedwiki

./: Cargo.toml  Dockerfile  docker-compose.yml  provision_database.sql
src/: main.rs  routes.rs
src/views/wiki/: mod.rs
templates/wiki/: diff.html  history.html  view.html
test/: example.md  testpost.sh
